--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: rskylinetools
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Functions for gridding and plotting skylines.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Louis du Plessis
+Maintainer: Louis du Plessis <louis.duplessis@zoo.ox.ac.uk>
+Description: This package description will be written later.
+License: GPL-3.0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
-Suggests: testthat
+RoxygenNote: 6.1.1
+Imports:
+    TreeSim
+Suggests: 
+    testthat,
+    beastio
+
